# TP-Datos

./: pyproject.toml  sintesis_trabajo_practico_etapas.docx
